--- a/PageRank/PageRank.ipynb
+++ b/PageRank/PageRank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        " ...]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,13 +1074,21 @@
     "for i in range(20):\n",
     "    contribs = links.join(ranks).flatMap(lambda url_urls_rank: computeContribs(url_urls_rank[1][0], url_urls_rank[1][1]))\n",
     "    ranks_update = contribs.reduceByKey(add).mapValues(lambda rank: rank*beta)\n",
-    "    S = ranks_update.map(lambda x : ('sum', x[1])).reduceByKey(add).collect()[0][1]\n",
+    "    S = ranks_update.map(lambda x : ('sum', x[1])).reduceByKey(add).map(lambda x : x[1])\n",
+    "    S = sc.broadcast(S.collect())\n",
     "    ranks = ranks.mapValues(lambda rank: 0).leftOuterJoin(ranks_update).map(lambda x : cleanRank(x))\\\n",
-    "                .mapValues(lambda x : x+((1-S)/num_node))\n",
+    "                .mapValues(lambda x : x+((1-S.value[0])/num_node))\n",
     "    print('iteration %d finish!' % (i+1))\n",
     "\n",
     "sorted(ranks.map(lambda x : (x[1], x[0])).collect(), reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
